changed text at the beginning

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,3 +25,4 @@ markers =
     wwns_all_ports_get: This is the wwns_all_ports_get test.
     replication_get: This is the replication_get test.
     replication_get_gad: This is the replication_get_gad test.
+    snapshots_get: This is the snapshots_get test.
