--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,57 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: win-64
-atomicwrites=1.4.0=py_0
-attrs=20.2.0=py_0
-ca-certificates=2020.10.14=0
-certifi=2020.11.8=py39haa95532_0
-colorama=0.4.4=py_0
-importlib-metadata=2.0.0=py_1
-importlib_metadata=2.0.0=1
-iniconfig=1.1.1=py_0
-keyring=21.5.0=py39hcbf5309_0
-more-itertools=8.5.0=py_0
+atomicwrites=1.4.0=pyh9f0ad1d_0
+attrs=20.3.0=pyhd3deb0d_0
+bleach=3.2.1=pyh9f0ad1d_0
+brotlipy=0.7.0=py37h0013d47_1001
+ca-certificates=2020.12.5=h5b45459_0
+certifi=2020.12.5=py37h03978a9_0
+cffi=1.14.4=py37hd8e9650_1
+chardet=3.0.4=py37hf50a25e_1008
+cmarkgfm=0.4.2=py37h4ab8f01_3
+colorama=0.4.4=pyh9f0ad1d_0
+cryptography=3.2.1=py37hd8e9650_0
+docutils=0.16=py37hf50a25e_2
+idna=2.10=pyh9f0ad1d_0
+importlib-metadata=3.1.1=pyhd8ed1ab_0
+importlib_metadata=3.1.1=hd8ed1ab_0
+iniconfig=1.1.1=pyh9f0ad1d_0
+keyring=21.5.0=py37h03978a9_0
+more-itertools=8.6.0=pyhd8ed1ab_0
 openssl=1.1.1h=he774522_0
-packaging=20.4=py_0
-pip=20.3=py39haa95532_0
-pluggy=0.12.0=py_0
-py=1.9.0=py_0
-pyparsing=2.4.7=py_0
-pytest=6.1.2=py39haa95532_0
-pytest-html=3.0.0=pyhd8ed1ab_0
+packaging=20.7=pyhd3deb0d_0
+pip=20.3.1=py37haa95532_0
+pkginfo=1.6.1=pyh9f0ad1d_0
+pluggy=0.13.1=py37hf50a25e_3
+py=1.9.0=pyh9f0ad1d_0
+pycparser=2.20=pyh9f0ad1d_2
+pygments=2.7.3=pyhd8ed1ab_0
+pyopenssl=20.0.0=pyhd8ed1ab_0
+pyparsing=2.4.7=pyh9f0ad1d_0
+pysocks=1.7.1=py37hf50a25e_2
+pytest=6.1.2=pypi_0
+pytest-html=3.1.0=pyhd8ed1ab_0
 pytest-metadata=1.11.0=pyhd3deb0d_0
-python=3.9.0=h6244533_2
-python_abi=3.9=1_cp39
-pywin32-ctypes=0.2.0=py39hde42818_1002
-setuptools=50.3.2=py39haa95532_2
-six=1.15.0=py_0
+python=3.7.9=h60c2a47_0
+python_abi=3.7=1_cp37m
+pywin32-ctypes=0.2.0=py37hc8dfbb8_1002
+readme_renderer=27.0=pyh9f0ad1d_0
+requests=2.25.0=pyhd3deb0d_0
+requests-toolbelt=0.9.1=py_0
+rfc3986=1.4.0=pyh9f0ad1d_0
+setuptools=51.0.0=py37haa95532_2
+six=1.15.0=pyh9f0ad1d_0
 sqlite=3.33.0=h2a8f88b_0
-toml=0.10.1=py_0
-tzdata=2020d=h14c3975_0
-vc=14.1=h0510ff6_4
-vs2015_runtime=14.16.27012=hf0eaf9b_3
-wheel=0.36.0=pyhd3eb1b0_0
-wincertstore=0.2=py39h2bbff1b_0
-zipp=3.3.1=py_0
+toml=0.10.2=pyhd8ed1ab_0
+tqdm=4.54.1=pyhd8ed1ab_0
+twine=3.2.0=py37hc8dfbb8_1
+urllib3=1.25.11=py_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+webencodings=0.5.1=py_1
+wheel=0.36.1=pyhd3eb1b0_0
+win_inet_pton=1.1.0=py37hc8dfbb8_1
+wincertstore=0.2=py37_0
+zipp=3.4.0=py_0
 zlib=1.2.11=h62dcd97_4
