--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # platform: win-64
 atomicwrites=1.4.0=pyh9f0ad1d_0
 attrs=20.3.0=pyhd3deb0d_0
-bleach=3.2.1=pyh9f0ad1d_0
+bleach>=3.3.0
 brotlipy=0.7.0=py37h0013d47_1001
 ca-certificates=2020.12.5=h5b45459_0
 certifi=2020.12.5=py37h03978a9_0
@@ -11,7 +11,7 @@ cffi=1.14.4=py37hd8e9650_1
 chardet=3.0.4=py37hf50a25e_1008
 cmarkgfm=0.4.2=py37h4ab8f01_3
 colorama=0.4.4=pyh9f0ad1d_0
-cryptography=3.2.1=py37hd8e9650_0
+cryptography>=3.3.2
 docutils=0.16=py37hf50a25e_2
 idna=2.10=pyh9f0ad1d_0
 importlib-metadata=3.1.1=pyhd8ed1ab_0
@@ -24,9 +24,9 @@ packaging=20.7=pyhd3deb0d_0
 pip=20.3.1=py37haa95532_0
 pkginfo=1.6.1=pyh9f0ad1d_0
 pluggy=0.13.1=py37hf50a25e_3
-py=1.9.0=pyh9f0ad1d_0
+py>=1.10.0
 pycparser=2.20=pyh9f0ad1d_2
-pygments=2.7.3=pyhd8ed1ab_0
+Pygments>=2.7.4
 pyopenssl=20.0.0=pyhd8ed1ab_0
 pyparsing=2.4.7=pyh9f0ad1d_0
 pysocks=1.7.1=py37hf50a25e_2
